--- a/notificationapp-test/pom.xml
+++ b/notificationapp-test/pom.xml
@@ -38,6 +38,7 @@
                 <suiteXmlFiles>
                 <suiteXmlFile>testNG.xml</suiteXmlFile>
                 </suiteXmlFiles>
+                <maven.test.skip>true</maven.test.skip>
                 </configuration>
             </plugin>
         </plugins>
